Bug 300118 - Display glitch for rating in verbose playlist
Summary: Display glitch for rating in verbose playlist
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist/Playlist Layout Editor (other bugs)
Version First Reported In: 2.6-git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-16 08:38 UTC by mogliii
Modified: 2013-02-07 15:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
Screenshot illustrating the reported display glitch (13.63 KB, image/png)
2012-05-16 08:38 UTC, mogliii
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mogliii 2012-05-16 08:38:07 UTC
Created attachment 71131 [details]
Screenshot illustrating the reported display glitch

When using verbose playlist layout, the song rating is shown as one column. When clicking the stars to adjust the rating, a display glitch is visible (see attached screenshot). Rating can still be changed, but it is not very pleasant.

This is reproducible.
Comment 1 Mark Fraser 2012-05-16 14:59:02 UTC
I've seen this too and did consider filing a bug, but wasn't sure how what to file it against. Anyway, I have found that after clicking on the stars to adjust the rating and move the pointer to the left of the stars a drag pointer appears and I can drag it to the left until the stars line up with the ones underneath. Unfortunately it isn't permanent.
Comment 2 Myriam Schweingruber 2012-05-16 16:58:43 UTC
Mark: did you try modifying the layout itself? Of course you will need to make a copy of it, as the default layouts can't be modified by the user, but you can adapt a copy of it and the change should then be permanent.
Comment 3 Mark Fraser 2012-05-16 18:34:38 UTC
I've already got a modified layout and I did try altering the spacings, but it didn't seem to make much difference. I couldn't get them to be directly above.
Comment 4 Myriam Schweingruber 2012-05-17 15:08:22 UTC
(In reply to comment #3)
> I've already got a modified layout and I did try altering the spacings, but
> it didn't seem to make much difference. I couldn't get them to be directly
> above.

The problem is that the size of the stars changes when editing it, I think that needs to be adjusted.

Confirmed in current git, but since we are working on a release in June this might not be done in time.
Comment 5 Janet 2012-07-10 22:48:18 UTC
It happens since the columns are adjustable in editing mode. For me it makes placing the rating impossible, it's just a wild guess where to click to set two or four stars...

Alas resizing of the columns is permanent though I didn't save anything - thus garbled my whole very hard worked out layout by accidently moving something :(.
Comment 6 Kyle 2012-12-03 02:40:17 UTC
Confirmed: Glitch occurs as of version 2.6.
Comment 7 Myriam Schweingruber 2012-12-03 09:22:15 UTC
Confirmed in v2.6.0-422-gfc07990
Comment 8 Ralf Engels 2013-02-07 15:25:54 UTC
Git commit 64bbcc9c54b76f4eab413982be3e23114ebc4b06 by Ralf Engels.
Committed on 06/02/2013 at 18:05.
Pushed by rengels into branch 'master'.

Fix Display glitch for rating in verbose playlist
FIXED-IN: 2.8

M  +5    -1    src/playlist/view/listview/InlineEditorWidget.cpp

http://commits.kde.org/amarok/64bbcc9c54b76f4eab413982be3e23114ebc4b06