Fix Display glitch for rating in verbose playlist

BUG: 300118
FIXED-IN: 2.8